# kubeflow-sdk-uv-example

./: README.md  pyproject.toml
kubeflow/optimizer/: api_client.py  pyproject.toml
kubeflow/trainer/: pyproject.toml
sdk/trainer/: main.py
