[project]
name = "kubeflow-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "trainer",
    "workspace>=0.3.1",
]

[tool.uv.workspace]
members = ["sdk/trainer"]

[tool.uv.sources]
trainer = { workspace = true }


 [tool.hatch.build.targets.wheel]
 packages = ["sdk"]

 [tool.hatch.version]
 path = "sdk/trainer/__init__.py"

 [tool.hatch.metadata]
 allow-direct-references = true