[project]
name = "kubeflow-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=14.5.14",
    "grpcio>=1.64.1",
    "kubeflow-training==1.9.0",
    "kubernetes>=27.2.0",
    "protobuf>=4.21.12,<5",
    "pydantic>=2.10.0",
    "six>=1.10",
    "trainer",
    "urllib3>=1.15.1",
    "optimizer",
    "workspace>=0.3.1",
]

[tool.uv.workspace]
members = ["kubeflow/trainer", "kubeflow/optimizer"]

[tool.uv.sources]
trainer = { workspace = true }
optimizer = { workspace = true }


 [tool.hatch.build.targets.wheel]
 packages = ["kubeflow"]

 [tool.hatch.version]
 path = "kubeflow/trainer/__init__.py"

 [tool.hatch.metadata]
 allow-direct-references = true
